StatixLauncher: double tap on home screen to turn off screen
Change-Id: I554c005d5e523aca0842c78a353686e86af1a7f2
Signed-off-by: Mesquita <mickaelmendes50@gmail.com>

--- a/app_override/StatixLauncher/AndroidManifest.xml
+++ b/app_override/StatixLauncher/AndroidManifest.xml
@@ -26,6 +26,8 @@
     Refer comments around specific entries on how to extend individual components.
     -->
 
+    <uses-permission android:name="android.permission.DEVICE_POWER" />
+
     <application
         android:backupAgent="com.android.launcher3.LauncherBackupAgent"
         android:fullBackupOnly="true"
