StatixSystemUI: Smart Pixels [1/3]
Disables a percentage of pixels on screen to reduce power consumption.
If enabled with battery saver, don't scale brightness at 0.5f for UX.

Includes:
 - Option to enable on battery saver
 - User chosen grid
 - Burn-in protection

Configurable via overlay and disabled by defualt:
  "config_enableSmartPixels"

Change-Id: Id3c78548cb090ab2da11f543da31c5a408fb9fe9
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: Adin Kwok <adin.kwok@carbonrom.org>

--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -56,6 +56,15 @@
             android:exported="true"
             android:authorities="com.android.systemui.keyguard"/>
 
+        <!-- Smart Pixels -->
+        <service android:name=".smartpixels.SmartPixelsService"
+            android:enabled="true" />
+        <receiver android:name=".smartpixels.SmartPixelsReceiver" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
         <!-- Columbus -->
         <service
             android:name="com.google.android.systemui.columbus.ColumbusServiceProxy"
