stxsysui: smartspace and backgesture integration
Change-Id: I6de696d1273e7013ca1278911c53b4fcc35d04b8

--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -23,6 +23,19 @@
         xmlns:tools="http://schemas.android.com/tools"
         coreApp="true">
 
-    <!-- Nothing. This space might be used in the future -->
+    <protected-broadcast android:name="com.google.android.systemui.smartspace.CLICK_EVENT"/>
+    <protected-broadcast android:name="com.google.android.systemui.smartspace.ENABLE_UPDATE"/>
+    <protected-broadcast android:name="com.google.android.systemui.smartspace.EXPIRE_EVENT"/>
+
+    <application>
+        <provider android:name=".keyguard.KeyguardSliceProvider"
+            tools:node="remove" />
+
+        <provider android:name="com.statix.android.systemui.keyguard.KeyguardSliceProviderStatix"
+            android:enabled="true"
+            android:exported="true"
+            android:authorities="com.android.systemui.keyguard"/>
+
+    </application>
 
 </manifest>
