--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -31,6 +31,9 @@
     <protected-broadcast android:name="com.google.android.systemui.smartspace.ENABLE_UPDATE"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.EXPIRE_EVENT"/>
 
+    <permission android:name="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE" android:protectionLevel="signature|preinstalled"/>
+    <uses-permission android:name="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE"/>
+
     <application>
         <provider android:name=".keyguard.KeyguardSliceProvider"
             tools:node="remove" />
@@ -39,6 +42,20 @@
             android:enabled="true"
             android:exported="true"
             android:authorities="com.android.systemui.keyguard"/>
+
+        <!-- Columbus -->
+        <service
+            android:name="com.google.android.systemui.columbus.ColumbusServiceProxy"
+            android:permission="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE"
+            android:exported="true"/>
+
+        <service
+            android:name="com.statix.android.systemui.columbus.ColumbusTargetRequestServiceWrapper"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.systemui.QUICK_TAP_TARGET_REQUEST"/>
+            </intent-filter>
+        </service>
 
     </application>
 
