--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -24,12 +24,23 @@
         coreApp="true">
 
     <original-package android:name="com.android.systemui"/>
+    <uses-permission android:name="android.permission.ACCESS_CONTEXT_HUB"/>
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
     <permission android:name="com.android.systemui.permission.SEND_ALERT_BROADCASTS" android:protectionLevel="preinstalled|signature"/>
     <uses-permission android:name="com.google.android.deskclock.permission.RECEIVE_ALERT_BROADCASTS"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.CLICK_EVENT"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.ENABLE_UPDATE"/>
     <protected-broadcast android:name="com.google.android.systemui.smartspace.EXPIRE_EVENT"/>
+
+    <permission android:name="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE" android:protectionLevel="signature|preinstalled"/>
+    <uses-permission android:name="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE"/>
+    <uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS"/>
+
+    <permission android:name="com.google.android.elmyra.permission.CONFIGURE_ASSIST_GESTURE" android:protectionLevel="signature|preinstalled"/>
+    <permission android:name="com.google.sensor.elmyra.permission.USE_RAW_SENSOR" android:protectionLevel="signature|preinstalled"/>
+    <uses-permission android:name="com.google.android.elmyra.permission.CONFIGURE_ASSIST_GESTURE"/>
+    <uses-permission android:name="com.google.restricted_assist_gesture.permission.RESTRICTED_ASSIST_GESTURE_PROVIDER"/>
+    <uses-permission android:name="com.google.sensor.elmyra.permission.USE_RAW_SENSOR"/>
 
     <uses-permission android:name="android.permission.MANAGE_GAME_MODE" android:protectionLevel="signature"/>
 
@@ -41,6 +52,26 @@
             android:enabled="true"
             android:exported="true"
             android:authorities="com.android.systemui.keyguard"/>
+
+        <!-- Columbus -->
+        <service
+            android:name="com.google.android.systemui.columbus.ColumbusServiceProxy"
+            android:permission="com.google.android.columbus.permission.CONFIGURE_COLUMBUS_GESTURE"
+            android:exported="true"/>
+
+        <service
+            android:name="com.google.android.systemui.columbus.ColumbusTargetRequestService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.systemui.QUICK_TAP_TARGET_REQUEST"/>
+            </intent-filter>
+        </service>
+
+        <!-- Elmyra -->
+        <service
+            android:name="com.google.android.systemui.elmyra.ElmyraServiceProxy"
+            android:permission="com.google.android.elmyra.permission.CONFIGURE_ASSIST_GESTURE"
+            android:exported="true"/>
 
         <!-- Game Dashboard -->
         <activity
