--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -44,6 +44,9 @@
 
     <uses-permission android:name="android.permission.MANAGE_GAME_MODE" android:protectionLevel="signature"/>
 
+    <!-- DataSwitch tile -->
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
+
     <application>
         <provider android:name=".keyguard.KeyguardSliceProvider"
             tools:node="remove" />
