StatixSystemUI: update Google assets to 12L
* introduce elmyra assets as well

Change-Id: I9f21e854971e6a1db63734c15d619e408d5fac80

--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -52,7 +52,7 @@
             tools:node="remove" />
 
         <provider android:name="com.statix.android.systemui.keyguard.KeyguardSliceProviderStatix"
-            android:enabled="true"
+            android:enabled="false"
             android:exported="true"
             android:authorities="com.android.systemui.keyguard"/>
 
