--- a/app_override/StatixSystemUI/AndroidManifest.xml
+++ b/app_override/StatixSystemUI/AndroidManifest.xml
@@ -41,6 +41,7 @@
 
     <permission android:name="com.google.android.elmyra.permission.CONFIGURE_ASSIST_GESTURE" android:protectionLevel="signature|preinstalled"/>
     <permission android:name="com.google.sensor.elmyra.permission.USE_RAW_SENSOR" android:protectionLevel="signature|preinstalled"/>
+    <uses-permission android:name="android.permission.VIBRATE_ALWAYS_ON" />
     <uses-permission android:name="com.google.android.elmyra.permission.CONFIGURE_ASSIST_GESTURE"/>
     <uses-permission android:name="com.google.restricted_assist_gesture.permission.RESTRICTED_ASSIST_GESTURE_PROVIDER"/>
     <uses-permission android:name="com.google.sensor.elmyra.permission.USE_RAW_SENSOR"/>
@@ -52,7 +53,7 @@
             tools:node="remove" />
 
         <provider android:name="com.statix.android.systemui.keyguard.KeyguardSliceProviderStatix"
-            android:enabled="true"
+            android:enabled="false"
             android:exported="true"
             android:authorities="com.android.systemui.keyguard"/>
 
